[package]
name = "rusty-panther"
version = "0.1.0"
edition = "2021"

categories = ["terminal", "ui"]
description = "A simple, widget-based terminal UI crate."
documentation = "https://docs.rs/crate/rusty-panther"
keywords = ["terminal", "tui", "ui", "widget"]
license = "MIT"
repository = "https://github.com/SamMatzko/rusty-panther"

[dependencies]
crossterm = "0.23.1"